--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Proyectos</a>
+                    <a class="nav-link active" aria-current="page" href="./proyectos.html">Proyectos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Formacion</a>
+                    <a class="nav-link" href="./formacion.html">Formacion</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contacto</a>
+                    <a class="nav-link" href="./contacto.html">Contacto</a>
                   </li>
                 </ul>
               </div>
