Se modofico contacto.html

--- a/proyectos.html
+++ b/proyectos.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-lg color1"><!--Llama navbar.css-->
             <div class="container-fluid textos">
-              <a class="navbar-brand" href="./acercademi.html">Acerca de mi</a>
+              <a class="navbar-brand" href="./index.html">Acerca de mi</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -23,7 +23,7 @@
                     <a class="nav-link active" aria-current="page" href="./proyectos.html">Proyectos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./formacion.html">Formacion</a>
+                    <a class="nav-link" href="./habilidades.html">Habilidades</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./contacto.html">Contacto</a>
