--- a/proyectos.html
+++ b/proyectos.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/navbar.css">
-    <link rel="stylesheet" href="./css/proyectos.css">
     <title>Proyectos</title>
+    <style>
+      .borde{
+          padding: 5%;
+      }
+  </style>
 </head>
 <body style="background-color: lightblue;">
     <header>
@@ -33,7 +37,7 @@
             </div>
           </nav>
     </header>
-    <div class="container">
+    <div class="container borde">
         <div class="row g-3">
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card" >
@@ -60,16 +64,11 @@
                     <h5 class="card-title">Freelance</h5>
                       <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi eligendi amet nam unde maxime, nesciunt possimus mollitia aspernatur! Culpa et quas quam rerum reprehenderit veniam necessitatibus quia officiis magni soluta.</p>
                     </div>
-                  </div>
-                
+                  </div>                
             </div>
-
         </div>
-
     </div>
-
-
-    
+   
 <footer class="color1">
     <em>Derechos reservados &#169;Alberto trejo</em>
     <br><br>
