--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/navbar.css">
     <title>Inicio</title>
+    <style>
+      .borde{
+          padding: 5%;
+      }
+    </style>
+    
 </head>
 <body style="background-color: lightblue;"><!--Colores de fondo-->
     <header>
@@ -32,14 +38,28 @@
             </div>
           </nav>
     </header>
-    <div class="card" style="width: 18rem;">
-        <img src="./src/IMG-20220116-WA0005.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-        <h5 class="card-title">Ramon Trejo</h5>
-          <p class="card-text">Futuro desarrollador Java Full Stack</p>
-          <a href="https://www.linkedin.com/in/ramon-trejo-257316269/" class="btn btn-primary">LinkedIn</a>
+    <div class="container borde"><!--Contenedor container fluid -->
+      <!--El col-sm-(4 o 12) punto de quiebre small-->
+      <div class="row"><!--Fila-->
+        <div class="col-12 col-md-6 col-lg-4">
+          <div></div><!--Columnas-->
         </div>
+        <div class="col-12 col-md-6 col-lg-4">  
+          <div class="card">
+            <img src="./src/IMG-20220116-WA0005.jpg" class="card-img-top" alt="yo">
+            <div class="card-body">
+              <h5 class="card-title">Ramon Trejo</h5>
+                <p class="card-text">Futuro desarrollador Java Full Stack</p>
+                <a href="https://www.linkedin.com/in/ramon-trejo-257316269/" class="btn btn-primary">LinkedIn</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">  
+          <div></div>
+        </div>  
       </div>
+    </div>
+    
 <footer class="color1">
     <em>Derechos reservados &#169;Alberto trejo</em>
     <br><br>
