Se modifico el navbar.css

--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
 </head>
 <body style="background-color: lightblue;">
     <header>
-        <nav class="navbar navbar-expand-lg color1"><!--Llama navbar.css-->
+        <nav class="navbar navbar-expand-lg fixed-top color1"><!--Llama navbar.css-->
             <div class="container-fluid textos">
               <a class="navbar-brand" href="./index.html">Acerca de mi</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,28 +33,28 @@
           </nav>
     </header>
 
-    <div class="container contact" id="idcontact">
-  
-      <p class="sect">Contactame</p>
-     
-      <form class="formulario" id="formulario">
-        <p class="letraform">Trabajemos Juntos !!!</p>
-        <br>
-        <div class="form-group">
+    <main class="container">
+      <div class="container contact" id="idcontact">
+        <p class="sect">Contactame</p>
+        <form class="formulario" id="formulario">
+          <p class="letraform">Trabajemos Juntos !!!</p>
+          <br>
+          <div class="form-group">
             <label for="Nombre" class="letraform2">Nombre</label>
             <input type="text" class="form-control" id="Nombre" placeholder="nombre">
-        </div>
-        <div class="form-group">
-          <label for="correo" class="letraform2">Email</label>
-          <input type="email" class="form-control" id="correo" placeholder="nombre@ejemplo.com">
-        </div>
-        <div class="form-group">
-          <label for="campoMensaje" class="letraform2">Mensaje</label>
-          <textarea type="text" class="form-control" id="campoMensaje" rows="3"></textarea>
-        </div>
-        <button type="button" class=" btn-enviar" id="btnValidar">Enviar</button>
-    </form>
-</div>
+          </div>
+          <div class="form-group">
+            <label for="correo" class="letraform2">Email</label>
+            <input type="email" class="form-control" id="correo" placeholder="nombre@ejemplo.com">
+          </div>
+          <div class="form-group">
+            <label for="campoMensaje" class="letraform2">Mensaje</label>
+            <textarea type="text" class="form-control" id="campoMensaje" rows="3"></textarea>
+          </div>
+          <button type="button" class=" btn-enviar" id="btnValidar">Enviar</button>
+        </form>
+      </div>
+    </main>
 
 <footer class="color1">
     <em>Derechos reservados &#169;Alberto trejo</em>
