--- a/habilidades.html
+++ b/habilidades.html
@@ -10,7 +10,7 @@
 </head>
 <body style="background-color: lightblue;">
     <header>
-        <nav class="navbar navbar-expand-lg color1"><!--Llama navbar.css-->
+        <nav class="navbar navbar-expand-lg fixed-top color1"><!--Llama navbar.css-->
             <div class="container-fluid textos">
               <a class="navbar-brand" href="./index.html">Acerca de mi</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
