--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <title>Inicio</title>
     <style>
       .borde{
-          padding: 5%;
+          padding: 15%;
       }
     </style>
     
 </head>
 <body style="background-color: lightblue;"><!--Colores de fondo-->
     <header>
-        <nav class="navbar navbar-expand-lg color1"><!--Llama navbar.css-->
+        <nav class="navbar navbar-expand-lg fixed-top color1"><!--Llama navbar.css-->
             <div class="container-fluid textos">
               <a class="navbar-brand" href="./index.html">Acerca de mi</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,27 +38,30 @@
             </div>
           </nav>
     </header>
-    <div class="container borde"><!--Contenedor container fluid -->
-      <!--El col-sm-(4 o 12) punto de quiebre small-->
-      <div class="row"><!--Fila-->
-        <div class="col-12 col-md-6 col-lg-4">
-          <div></div><!--Columnas-->
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">  
-          <div class="card">
-            <img src="./src/IMG-20220116-WA0005.jpg" class="card-img-top" alt="yo">
-            <div class="card-body">
-              <h5 class="card-title">Ramon Trejo</h5>
-                <p class="card-text">Futuro desarrollador Java Full Stack</p>
-                <a href="https://www.linkedin.com/in/ramon-trejo-257316269/" class="btn btn-primary">LinkedIn</a>
+
+    <main class="borde">
+      <div class="container"><!--Contenedor container fluid -->
+        <!--El col-sm-(4 o 12) punto de quiebre small-->
+        <div class="row"><!--Fila-->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div></div><!--Columnas-->
+          </div>
+          <div class="col-12 col-md-6 col-lg-4">  
+            <div class="card">
+              <img src="./src/IMG-20220116-WA0005.jpg" class="card-img-top" alt="yo">
+              <div class="card-body">
+                <h5 class="card-title">Ramon Trejo</h5>
+                  <p class="card-text">Futuro desarrollador Java Full Stack</p>
+                  <a href="https://www.linkedin.com/in/ramon-trejo-257316269/" class="btn btn-primary">LinkedIn</a>
+              </div>
             </div>
           </div>
+          <div class="col-12 col-md-6 col-lg-4">  
+            <div></div>
+          </div>  
         </div>
-        <div class="col-12 col-md-6 col-lg-4">  
-          <div></div>
-        </div>  
       </div>
-    </div>
+    </main>
     
 <footer class="color1">
     <em>Derechos reservados &#169;Alberto trejo</em>
