--- a/proyectos.html
+++ b/proyectos.html
@@ -15,7 +15,7 @@
 </head>
 <body style="background-color: lightblue;">
     <header>
-        <nav class="navbar navbar-expand-lg color1"><!--Llama navbar.css-->
+        <nav class="navbar navbar-expand-lg fixed-top color1"><!--Llama navbar.css-->
             <div class="container-fluid textos">
               <a class="navbar-brand" href="./index.html">Acerca de mi</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +37,8 @@
             </div>
           </nav>
     </header>
-    <div class="container borde">
+    <main class="borde">
+      <div class="container">
         <div class="row g-3">
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card" >
@@ -67,7 +68,8 @@
                   </div>                
             </div>
         </div>
-    </div>
+      </div>
+    </main>
    
 <footer class="color1">
     <em>Derechos reservados &#169;Alberto trejo</em>
