Se creo y modifico style.css para unmejor manejo de las hojas de estilo

--- a/contacto.html
+++ b/contacto.html
@@ -1,70 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/navbar.css">
-    <title>Contacto</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/style.css">
+  
+  <title>Contacto</title>
 </head>
-<body style="background-color: lightblue;">
-    <header>
-        <nav class="navbar navbar-expand-lg fixed-top color1"><!--Llama navbar.css-->
-            <div class="container-fluid textos">
-              <a class="navbar-brand" href="./index.html">Acerca de mi</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./proyectos.html">Proyectos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./habilidades.html">Habilidades</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./contacto.html">Contacto</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </header>
 
-    <main class="container">
-      <div class="container contact" id="idcontact">
-        <p class="sect">Contactame</p>
-        <form class="formulario" id="formulario">
-          <p class="letraform">Trabajemos Juntos !!!</p>
-          <br>
-          <div class="form-group">
-            <label for="Nombre" class="letraform2">Nombre</label>
-            <input type="text" class="form-control" id="Nombre" placeholder="nombre">
-          </div>
-          <div class="form-group">
-            <label for="correo" class="letraform2">Email</label>
-            <input type="email" class="form-control" id="correo" placeholder="nombre@ejemplo.com">
-          </div>
-          <div class="form-group">
-            <label for="campoMensaje" class="letraform2">Mensaje</label>
-            <textarea type="text" class="form-control" id="campoMensaje" rows="3"></textarea>
-          </div>
-          <button type="button" class=" btn-enviar" id="btnValidar">Enviar</button>
-        </form>
+<body><!--Llama al style.css-->
+  <header>
+    <nav class="navbar navbar-expand-lg"><!--clase navbar para style.css-->
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./index.html">Acerca de mi</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./proyectos.html">Proyectos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./habilidades.html">Habilidades</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </main>
+    </nav>
+  </header>
 
-<footer class="color1">
+  <main class="container">
+    <div class="container contact" id="idcontact">
+      <p class="sect">Contactame</p>
+      <form class="formulario" id="formulario">
+        <p class="letraform">Trabajemos Juntos !!!</p>
+        <br>
+        <div class="form-group">
+          <label for="Nombre" class="letraform2">Nombre</label>
+          <input type="text" class="form-control" id="Nombre" placeholder="nombre">
+        </div>
+        <div class="form-group">
+          <label for="correo" class="letraform2">Email</label>
+          <input type="email" class="form-control" id="correo" placeholder="nombre@ejemplo.com">
+        </div>
+        <div class="form-group">
+          <label for="campoMensaje" class="letraform2">Mensaje</label>
+          <textarea type="text" class="form-control" id="campoMensaje" rows="3"></textarea>
+        </div>
+        <button type="button" class=" btn-enviar" id="btnValidar">Enviar</button>
+      </form>
+    </div>
+  </main>
+
+  <footer>
     <em>Derechos reservados &#169;Alberto trejo</em>
     <br><br>
-    <a href="https://github.com/trejoramon141295" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png" alt="link a fac" width="50px" height="50px"></a>
-</footer>
+    <a href="https://github.com/trejoramon141295" target="_blank"><img
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png"
+        alt="link a fac" width="50px" height="50px"></a>
+  </footer>
 
-        
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
-   
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+    integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+    crossorigin="anonymous"></script>
+
 </body>
+
 </html>
