--- a/proyectos.html
+++ b/proyectos.html
@@ -5,17 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/style.css">
+
     <title>Proyectos</title>
-    <style>
-      .borde{
-          padding: 5%;
-      }
-  </style>
 </head>
-<body style="background-color: lightblue;">
+
+<body><!--Llama al style.css-->
     <header>
-        <nav class="navbar navbar-expand-lg fixed-top color1"><!--Llama navbar.css-->
+        <nav class="navbar navbar-expand-lg"><!--clase navbar para style.css-->
             <div class="container-fluid textos">
               <a class="navbar-brand" href="./index.html">Acerca de mi</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +34,7 @@
             </div>
           </nav>
     </header>
-    <main class="borde">
+    <main>
       <div class="container">
         <div class="row g-3">
             <div class="col-12 col-md-6 col-lg-4">
@@ -71,7 +68,7 @@
       </div>
     </main>
    
-<footer class="color1">
+<footer>
     <em>Derechos reservados &#169;Alberto trejo</em>
     <br><br>
     <a href="https://github.com/trejoramon141295" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png" alt="link a fac" width="50px" height="50px"></a>
