--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/acercaDeMi.css">
 
   <title>Inicio</title>
 </head>
@@ -38,28 +39,42 @@
     </nav>
   </header>
 
-  <main>
-    <div class="container"><!--Contenedor container fluid -->
-      <!--El col-sm-(4 o 12) punto de quiebre small-->
-      <div class="row"><!--Fila-->
-        <div class="col-12 col-md-6 col-lg-4">
-          <div></div><!--Columnas-->
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="card">
-            <img src="./src/yo.png" class="card-img-top" alt="yo">
-            <div class="card-body">
-              <h5 class="card-title">Ramon Trejo</h5>
-              <p class="card-text">Futuro desarrollador Java Full Stack</p>
-              <a href="https://www.linkedin.com/in/ramon-trejo-257316269/" class="btn btn-primary">LinkedIn</a>
-            </div>
+  <main class="container">
+
+    <div class="container imgPrincipal">
+      <img src="./src/yo.png" alt="yo">
+    </div>
+    <div>
+      <h1>Ramon Trejo</h1>
+      <h2>Futuro desarrollador Java Full Stack</h2>
+      <a href="https://www.linkedin.com/in/ramon-trejo-257316269/" class="btn btn-primary">LinkedIn</a>
+      <!-- Button trigger modal -->
+      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        Acerca de :
+      </button>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Acerca de mi: </h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-          <div></div>
+          <div class="modal-body">
+            <img src="./src/yo.png" alt="yo">
+            <p>  Soy un desarrollador Java Full Stack Jr. y busco desarrollarme en el área de las tecnologías de la información. 
+            Apasionado de la programación y de la búsqueda constante de conocimientos para el aprendizaje.
+            </p>
+            <span>trejoramon141295@gmail.com</span> 
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+          </div>
         </div>
       </div>
     </div>
+
   </main>
 
   <footer>
