Se incluyo el estilo en el hover y detalles de acomodo en index

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 
   <main class="container">
 
-    <div class="container imgPrincipal">
-      <img src="./src/yo.png" alt="yo">
+    <div class="container" >
+      <img src="./src/yo.png" class="imgPrincipal" alt="yo">
     </div>
     <div>
       <h1>Ramon Trejo</h1>
       <h2>Futuro desarrollador Java Full Stack</h2>
-      <a href="https://www.linkedin.com/in/ramon-trejo-257316269/" class="btn btn-primary">LinkedIn</a>
+
       <!-- Button trigger modal -->
       <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
         Acerca de :
@@ -62,7 +62,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <img src="./src/yo.png" alt="yo">
+            <img src="./src/yo.png" class="imgPrincipal" alt="yo">
             <p>  Soy un desarrollador Java Full Stack Jr. y busco desarrollarme en el área de las tecnologías de la información. 
             Apasionado de la programación y de la búsqueda constante de conocimientos para el aprendizaje.
             </p>
