--- a/contacto.html
+++ b/contacto.html
@@ -5,42 +5,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="./src/icon-sub-zero.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/contacto.css">
   
   <title>Contacto</title>
 </head>
 
 <body><!--Llama al style.css-->
   <header>
-    <nav class="navbar navbar-expand-lg"><!--clase navbar para style.css-->
-      <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html">Acerca de mi</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./proyectos.html">Proyectos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./habilidades.html">Habilidades</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./contacto.html">Contacto</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
   </header>
 
-  <main class="container">
-    <div class="container contact" id="idcontact">
-      <p class="sect">Contactame</p>
+  <main class="container-fluid">
+    <div class="container contacto" id="idcontact">
+      <h1 class="sect">Contáctame</h1>
       <form class="formulario" id="formulario">
         <p class="letraform">Trabajemos Juntos !!!</p>
         <br>
@@ -56,7 +36,7 @@
           <label for="campoMensaje" class="letraform2">Mensaje</label>
           <textarea type="text" class="form-control" id="campoMensaje" rows="3"></textarea>
         </div>
-        <button type="button" class=" btn-enviar" id="btnValidar">Enviar</button>
+        <button type="button" class="btn btn-enviar" id="btnValidar">Enviar</button>
       </form>
     </div>
   </main>
@@ -76,6 +56,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
     integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
     crossorigin="anonymous"></script>
+
+    <script src="./js/navbar.js"></script>
 
 </body>
 
