--- a/habilidades.html
+++ b/habilidades.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="./src/icon-sub-zero.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
@@ -14,30 +15,8 @@
 
 <body><!--Llama al style.css-->
   <header>
-    <nav class="navbar navbar-expand-lg"><!--clase navbar para style.css-->
-      <div class="container-fluid textos">
-        <a class="navbar-brand" href="./index.html">Acerca de mi</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./proyectos.html">Proyectos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./habilidades.html">Habilidades</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./contacto.html">Contacto</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
   </header>
-  
+
   <main>
     <ul><a name="inicio">Mis Habilidades</a>
       <li><a href="#html">HTML</a></li>
@@ -62,7 +41,7 @@
     <img src="./src/Javascript-by-SoyHorizonte.jpg" alt="js" width="1200px" height="750px">
     <br>
     <a href="#inicio">Regresar</a>
-  </main>  
+  </main>
 
   <footer>
     <em>Derechos reservados &#169;Alberto trejo</em>
@@ -78,6 +57,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
     integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
     crossorigin="anonymous"></script>
+  <script src="./js/navbar.js"></script>
 
 </body>
 
